// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render basic v2 templates Default 1`] = `
"<!doctype html>
<html lang=\\"und\\" dir=\\"auto\\" xmlns=\\"http://www.w3.org/1999/xhtml\\" xmlns:v=\\"urn:schemas-microsoft-com:vml\\" xmlns:o=\\"urn:schemas-microsoft-com:office:office\\">
  <head>
    <title></title>
    <!--[if !mso]><!-->
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
    <!--<![endif]-->
    <meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <style type=\\"text/css\\">
      #outlook a { padding:0; }
      body { margin:0;padding:0;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%; }
      table, td { border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt; }
      img { border:0;height:auto;line-height:100%; outline:none;text-decoration:none;-ms-interpolation-mode:bicubic; }
      p { display:block;margin:13px 0; }
    </style>
    <!--[if mso]>
    <noscript>
    <xml>
    <o:OfficeDocumentSettings>
      <o:AllowPNG/>
      <o:PixelsPerInch>96</o:PixelsPerInch>
    </o:OfficeDocumentSettings>
    </xml>
    </noscript>
    <![endif]-->
    <!--[if lte mso 11]>
    <style type=\\"text/css\\">
      .mj-outlook-group-fix { width:100% !important; }
    </style>
    <![endif]-->
    
    
    <style type=\\"text/css\\">
      @media only screen and (min-width:576px) {
        .mj-column-per-100 { width:100% !important; max-width: 100%; }
      }
    </style>
    <style media=\\"screen and (min-width:576px)\\">
      .moz-text-html .mj-column-per-100 { width:100% !important; max-width: 100%; }
    </style>
    
    
  
    
    <style type=\\"text/css\\">

    @media only screen and (max-width:575px) {
      table.mj-full-width-mobile { width: 100% !important; }
      td.mj-full-width-mobile { width: auto !important; }
    }
  
    </style>
     
    <style type=\\"text/css\\">
a {
                  color: #131313;
                }
                @media only screen and (max-width: 480px) { 
                  *[class~=hide_on_mobile] { display: none !important;} 
                  *[class~=hoverTable] { table-layout: auto !important;}
                }
    </style>
    
  </head>
  <body style=\\"word-spacing:normal;background-color:#131313;\\">
    
    
      <div
         style=\\"background-color:#131313;\\" lang=\\"und\\" dir=\\"auto\\"
      >
        
      
      <!--[if mso | IE]><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"\\" role=\\"presentation\\" style=\\"width:600px;\\" width=\\"600\\" bgcolor=\\"#131313\\" ><tr><td style=\\"line-height:0px;font-size:0px;mso-line-height-rule:exactly;\\"><v:rect style=\\"width:600px;\\" xmlns:v=\\"urn:schemas-microsoft-com:vml\\" fill=\\"true\\" stroke=\\"false\\"><v:fill origin=\\"0.5, 0\\" position=\\"0.5, 0\\" src=\\"\\" color=\\"#131313\\" type=\\"tile\\" size=\\"600px\\" aspect=\\"atmost\\" /><v:textbox style=\\"mso-fit-shape-to-text:true\\" inset=\\"0,0,0,0\\"><![endif]-->
          
      <div  style=\\"background:#131313;background-color:#131313;margin:0px auto;max-width:600px;\\">
        <div  style=\\"line-height:0;font-size:0;\\">
        <table
           align=\\"center\\" background=\\"\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"background:#131313;background-color:#131313;width:100%;\\"
        >
          <tbody>
            <tr>
              <td
                 style=\\"direction:ltr;font-size:0px;padding:0px;padding-bottom:32px;padding-left:32px;padding-right:32px;padding-top:32px;text-align:center;\\"
              >
                <!--[if mso | IE]><table role=\\"presentation\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\"><tr><td class=\\"\\" style=\\"width:536px;\\" ><![endif]-->
            
      <div
         class=\\"mj-column-per-100 mj-outlook-group-fix\\" style=\\"font-size:0;line-height:0;text-align:left;display:inline-block;width:100%;direction:ltr;\\"
      >
        <!--[if mso | IE]><table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" ><tr><td style=\\"vertical-align:top;width:536px;\\" ><![endif]-->
                
      <div
         class=\\"mj-column-per-100 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" width=\\"100%\\"
      >
        <tbody>
          <tr>
            <td  style=\\"vertical-align:top;padding:0px;\\">
              
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"left\\" style=\\"font-size:0px;padding:0px;word-break:break-word;\\"
                >
                  
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-collapse:collapse;border-spacing:0px;\\"
      >
        <tbody>
          <tr>
            <td  style=\\"width:200px;\\">
              
      <img
         alt=\\"3ook.com\\" src=\\"http://localhost:3000/static/3ookcom-full-logo.png\\" style=\\"border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:14px;\\" width=\\"200\\" height=\\"auto\\"
      />
    
            </td>
          </tr>
        </tbody>
      </table>
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
            </td>
          </tr>
        </tbody>
      </table>
    
      </div>
    
              <!--[if mso | IE]></td></tr></table><![endif]-->
      </div>
    
          <!--[if mso | IE]></td></tr></table><![endif]-->
              </td>
            </tr>
          </tbody>
        </table>
        </div>
      </div>
    
        <!--[if mso | IE]></v:textbox></v:rect></td></tr></table><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"\\" role=\\"presentation\\" style=\\"width:600px;\\" width=\\"600\\" bgcolor=\\"#f9f9f9\\" ><tr><td style=\\"line-height:0px;font-size:0px;mso-line-height-rule:exactly;\\"><v:rect style=\\"width:600px;\\" xmlns:v=\\"urn:schemas-microsoft-com:vml\\" fill=\\"true\\" stroke=\\"false\\"><v:fill origin=\\"0.5, 0\\" position=\\"0.5, 0\\" src=\\"\\" color=\\"#f9f9f9\\" type=\\"tile\\" size=\\"600px\\" aspect=\\"atmost\\" /><v:textbox style=\\"mso-fit-shape-to-text:true\\" inset=\\"0,0,0,0\\"><![endif]-->
          
      <div  style=\\"background:#f9f9f9;background-color:#f9f9f9;margin:0px auto;max-width:600px;\\">
        <div  style=\\"line-height:0;font-size:0;\\">
        <table
           align=\\"center\\" background=\\"\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"background:#f9f9f9;background-color:#f9f9f9;width:100%;\\"
        >
          <tbody>
            <tr>
              <td
                 style=\\"border-bottom:solid 2px #131313;direction:ltr;font-size:0px;padding:0px;padding-bottom:32px;padding-left:32px;padding-right:32px;padding-top:32px;text-align:center;\\"
              >
                <!--[if mso | IE]><table role=\\"presentation\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\"><tr><td class=\\"\\" style=\\"vertical-align:top;width:536px;\\" ><![endif]-->
            
      <div
         class=\\"mj-column-per-100 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" width=\\"100%\\"
      >
        <tbody>
          <tr>
            <td  style=\\"vertical-align:top;padding:0px;\\">
              
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"left\\" style=\\"font-size:0px;padding:0px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:24px;font-weight:600;line-height:1.5;text-align:left;color:#131313;\\"
      >Lorem Ipsum</div>
    
                </td>
              </tr>
            
              <tr>
                <td
                   align=\\"left\\" style=\\"font-size:0px;padding:0px;padding-top:16px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:20px;line-height:1.5;text-align:left;color:#131313;\\"
      >Lorem Ipsum</div>
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
            </td>
          </tr>
        </tbody>
      </table>
    
      </div>
    
          <!--[if mso | IE]></td></tr></table><![endif]-->
              </td>
            </tr>
          </tbody>
        </table>
        </div>
      </div>
    
        <!--[if mso | IE]></v:textbox></v:rect></td></tr></table><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"\\" role=\\"presentation\\" style=\\"width:600px;\\" width=\\"600\\" bgcolor=\\"#f7f7f7\\" ><tr><td style=\\"line-height:0px;font-size:0px;mso-line-height-rule:exactly;\\"><v:rect style=\\"width:600px;\\" xmlns:v=\\"urn:schemas-microsoft-com:vml\\" fill=\\"true\\" stroke=\\"false\\"><v:fill origin=\\"0.5, 0\\" position=\\"0.5, 0\\" src=\\"\\" color=\\"#f7f7f7\\" type=\\"tile\\" size=\\"600px\\" aspect=\\"atmost\\" /><v:textbox style=\\"mso-fit-shape-to-text:true\\" inset=\\"0,0,0,0\\"><![endif]-->
          
      <div  style=\\"background:#f7f7f7;background-color:#f7f7f7;margin:0px auto;max-width:600px;\\">
        <div  style=\\"line-height:0;font-size:0;\\">
        <table
           align=\\"center\\" background=\\"\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"background:#f7f7f7;background-color:#f7f7f7;width:100%;\\"
        >
          <tbody>
            <tr>
              <td
                 style=\\"direction:ltr;font-size:0px;padding:0px;padding-bottom:32px;padding-left:32px;padding-right:32px;padding-top:32px;text-align:center;\\"
              >
                <!--[if mso | IE]><table role=\\"presentation\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\"><tr><td class=\\"\\" style=\\"vertical-align:top;width:536px;\\" ><![endif]-->
            
      <div
         class=\\"mj-column-per-100 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" width=\\"100%\\"
      >
        <tbody>
          <tr>
            <td  style=\\"vertical-align:top;padding:0px;\\">
              
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"left\\" style=\\"font-size:0px;padding:0px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:14px;line-height:1.5;text-align:left;color:#131313;\\"
      ><div><p>Hello</p><p>World</p></div></div>
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
            </td>
          </tr>
        </tbody>
      </table>
    
      </div>
    
          <!--[if mso | IE]></td></tr></table><![endif]-->
              </td>
            </tr>
          </tbody>
        </table>
        </div>
      </div>
    
        <!--[if mso | IE]></v:textbox></v:rect></td></tr></table><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"\\" role=\\"presentation\\" style=\\"width:600px;\\" width=\\"600\\" bgcolor=\\"#f9f9f9\\" ><tr><td style=\\"line-height:0px;font-size:0px;mso-line-height-rule:exactly;\\"><v:rect style=\\"width:600px;\\" xmlns:v=\\"urn:schemas-microsoft-com:vml\\" fill=\\"true\\" stroke=\\"false\\"><v:fill origin=\\"0.5, 0\\" position=\\"0.5, 0\\" src=\\"\\" color=\\"#f9f9f9\\" type=\\"tile\\" size=\\"600px\\" aspect=\\"atmost\\" /><v:textbox style=\\"mso-fit-shape-to-text:true\\" inset=\\"0,0,0,0\\"><![endif]-->
          
      <div  style=\\"background:#f9f9f9;background-color:#f9f9f9;margin:0px auto;max-width:600px;\\">
        <div  style=\\"line-height:0;font-size:0;\\">
        <table
           align=\\"center\\" background=\\"\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"background:#f9f9f9;background-color:#f9f9f9;width:100%;\\"
        >
          <tbody>
            <tr>
              <td
                 style=\\"border-bottom:solid 12px #50e3c2;border-top:solid 2px #131313;direction:ltr;font-size:0px;padding:0px;padding-bottom:32px;padding-left:32px;padding-right:32px;padding-top:32px;text-align:center;\\"
              >
                <!--[if mso | IE]><table role=\\"presentation\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\"><tr><td class=\\"\\" style=\\"vertical-align:top;width:536px;\\" ><![endif]-->
            
      <div
         class=\\"mj-column-per-100 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" width=\\"100%\\"
      >
        <tbody>
          <tr>
            <td  style=\\"vertical-align:top;padding:0px;\\">
              
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:0px;word-break:break-word;\\"
                >
                  
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-collapse:separate;line-height:100%;\\"
      >
        <tbody>
          <tr>
            <td
               align=\\"center\\" bgcolor=\\"transparent\\" role=\\"presentation\\" style=\\"border:solid 2px #131313;border-radius:8px;cursor:auto;mso-padding-alt:10px 25px;background:transparent;\\" valign=\\"middle\\"
            >
              <a
                 href=\\"https://3ook.com/store?utm_medium=email&amp;utm_source=edm-footer\\" rel=\\"noopener noreferrer\\" style=\\"display:inline-block;background:transparent;color:#131313;font-family:Arial;font-size:14px;font-weight:600;line-height:120%;margin:0;text-decoration:none;text-transform:none;padding:10px 25px;mso-padding-alt:0px;border-radius:8px;\\" target=\\"_blank\\"
              >
                瀏覽書店
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    
                </td>
              </tr>
            
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:0px;padding-top:16px;padding-bottom:0px;word-break:break-word;\\"
                >
                  
      
     <!--[if mso | IE]><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" ><tr><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                <tbody>
                  
      <tr
        
      >
        <td  style=\\"padding:6px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:16px;width:32px;\\"
          >
            <tbody>
              <tr>
                <td  style=\\"font-size:0;height:32px;vertical-align:middle;width:32px;\\">
                  <a  href=\\"https://www.instagram.com/3ookcom?utm_medium=email&amp;utm_source=edm-footer\\" target=\\"_blank\\">
                    <img
                       alt=\\"\\" height=\\"32\\" src=\\"http://localhost:3000/static/social-elements/v2/instagram.png\\" style=\\"border-radius:16px;display:block;\\" width=\\"32\\"
                    />
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
        
      </tr>
    
                </tbody>
              </table>
            <!--[if mso | IE]></td><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                <tbody>
                  
      <tr
        
      >
        <td  style=\\"padding:6px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:16px;width:32px;\\"
          >
            <tbody>
              <tr>
                <td  style=\\"font-size:0;height:32px;vertical-align:middle;width:32px;\\">
                  <a  href=\\"https://www.facebook.com/3ookcom?utm_medium=email&amp;utm_source=edm-footer\\" target=\\"_blank\\">
                    <img
                       alt=\\"\\" height=\\"32\\" src=\\"http://localhost:3000/static/social-elements/v2/facebook.png\\" style=\\"border-radius:16px;display:block;\\" width=\\"32\\"
                    />
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
        
      </tr>
    
                </tbody>
              </table>
            <!--[if mso | IE]></td><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                <tbody>
                  
      <tr
        
      >
        <td  style=\\"padding:6px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:16px;width:32px;\\"
          >
            <tbody>
              <tr>
                <td  style=\\"font-size:0;height:32px;vertical-align:middle;width:32px;\\">
                  <a  href=\\"https://www.threads.com/@3ookcom?utm_medium=email&amp;utm_source=edm-footer\\" target=\\"_blank\\">
                    <img
                       alt=\\"\\" height=\\"32\\" src=\\"http://localhost:3000/static/social-elements/v2/threads.png\\" style=\\"border-radius:16px;display:block;\\" width=\\"32\\"
                    />
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
        
      </tr>
    
                </tbody>
              </table>
            <!--[if mso | IE]></td><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                <tbody>
                  
      <tr
        
      >
        <td  style=\\"padding:6px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:16px;width:32px;\\"
          >
            <tbody>
              <tr>
                <td  style=\\"font-size:0;height:32px;vertical-align:middle;width:32px;\\">
                  <a  href=\\"https://review.3ook.com?utm_medium=email&amp;utm_source=edm-footer\\" target=\\"_blank\\">
                    <img
                       alt=\\"\\" height=\\"32\\" src=\\"http://localhost:3000/static/social-elements/v2/substack.png\\" style=\\"border-radius:16px;display:block;\\" width=\\"32\\"
                    />
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
        
      </tr>
    
                </tbody>
              </table>
            <!--[if mso | IE]></td></tr></table><![endif]-->
    
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
            </td>
          </tr>
        </tbody>
      </table>
    
      </div>
    
          <!--[if mso | IE]></td></tr></table><![endif]-->
              </td>
            </tr>
          </tbody>
        </table>
        </div>
      </div>
    
        <!--[if mso | IE]></v:textbox></v:rect></td></tr></table><![endif]-->
    
    
      </div>
    
  </body>
</html>
  "
`;

exports[`Render basic v2 templates Not full logo 1`] = `
"<!doctype html>
<html lang=\\"und\\" dir=\\"auto\\" xmlns=\\"http://www.w3.org/1999/xhtml\\" xmlns:v=\\"urn:schemas-microsoft-com:vml\\" xmlns:o=\\"urn:schemas-microsoft-com:office:office\\">
  <head>
    <title></title>
    <!--[if !mso]><!-->
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
    <!--<![endif]-->
    <meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <style type=\\"text/css\\">
      #outlook a { padding:0; }
      body { margin:0;padding:0;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%; }
      table, td { border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt; }
      img { border:0;height:auto;line-height:100%; outline:none;text-decoration:none;-ms-interpolation-mode:bicubic; }
      p { display:block;margin:13px 0; }
    </style>
    <!--[if mso]>
    <noscript>
    <xml>
    <o:OfficeDocumentSettings>
      <o:AllowPNG/>
      <o:PixelsPerInch>96</o:PixelsPerInch>
    </o:OfficeDocumentSettings>
    </xml>
    </noscript>
    <![endif]-->
    <!--[if lte mso 11]>
    <style type=\\"text/css\\">
      .mj-outlook-group-fix { width:100% !important; }
    </style>
    <![endif]-->
    
    
    <style type=\\"text/css\\">
      @media only screen and (min-width:576px) {
        .mj-column-per-100 { width:100% !important; max-width: 100%; }
      }
    </style>
    <style media=\\"screen and (min-width:576px)\\">
      .moz-text-html .mj-column-per-100 { width:100% !important; max-width: 100%; }
    </style>
    
    
  
    
    <style type=\\"text/css\\">

    @media only screen and (max-width:575px) {
      table.mj-full-width-mobile { width: 100% !important; }
      td.mj-full-width-mobile { width: auto !important; }
    }
  
    </style>
     
    <style type=\\"text/css\\">
a {
                  color: #131313;
                }
                @media only screen and (max-width: 480px) { 
                  *[class~=hide_on_mobile] { display: none !important;} 
                  *[class~=hoverTable] { table-layout: auto !important;}
                }
    </style>
    
  </head>
  <body style=\\"word-spacing:normal;background-color:#131313;\\">
    
    
      <div
         style=\\"background-color:#131313;\\" lang=\\"und\\" dir=\\"auto\\"
      >
        
      
      <!--[if mso | IE]><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"\\" role=\\"presentation\\" style=\\"width:600px;\\" width=\\"600\\" bgcolor=\\"#131313\\" ><tr><td style=\\"line-height:0px;font-size:0px;mso-line-height-rule:exactly;\\"><v:rect style=\\"width:600px;\\" xmlns:v=\\"urn:schemas-microsoft-com:vml\\" fill=\\"true\\" stroke=\\"false\\"><v:fill origin=\\"0.5, 0\\" position=\\"0.5, 0\\" src=\\"\\" color=\\"#131313\\" type=\\"tile\\" size=\\"600px\\" aspect=\\"atmost\\" /><v:textbox style=\\"mso-fit-shape-to-text:true\\" inset=\\"0,0,0,0\\"><![endif]-->
          
      <div  style=\\"background:#131313;background-color:#131313;margin:0px auto;max-width:600px;\\">
        <div  style=\\"line-height:0;font-size:0;\\">
        <table
           align=\\"center\\" background=\\"\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"background:#131313;background-color:#131313;width:100%;\\"
        >
          <tbody>
            <tr>
              <td
                 style=\\"direction:ltr;font-size:0px;padding:0px;padding-bottom:32px;padding-left:32px;padding-right:32px;padding-top:32px;text-align:center;\\"
              >
                <!--[if mso | IE]><table role=\\"presentation\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\"><tr><td class=\\"\\" style=\\"width:536px;\\" ><![endif]-->
            
      <div
         class=\\"mj-column-per-100 mj-outlook-group-fix\\" style=\\"font-size:0;line-height:0;text-align:left;display:inline-block;width:100%;direction:ltr;\\"
      >
        <!--[if mso | IE]><table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" ><tr><td style=\\"vertical-align:top;width:536px;\\" ><![endif]-->
                
      <div
         class=\\"mj-column-per-100 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" width=\\"100%\\"
      >
        <tbody>
          <tr>
            <td  style=\\"vertical-align:top;padding:0px;\\">
              
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:0px;word-break:break-word;\\"
                >
                  
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-collapse:collapse;border-spacing:0px;\\"
      >
        <tbody>
          <tr>
            <td  style=\\"width:32px;\\">
              
      <img
         alt=\\"3ook.com\\" src=\\"http://localhost:3000/static/3ookcom-icon-logo.png\\" style=\\"border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:14px;\\" width=\\"32\\" height=\\"auto\\"
      />
    
            </td>
          </tr>
        </tbody>
      </table>
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
            </td>
          </tr>
        </tbody>
      </table>
    
      </div>
    
              <!--[if mso | IE]></td></tr></table><![endif]-->
      </div>
    
          <!--[if mso | IE]></td></tr></table><![endif]-->
              </td>
            </tr>
          </tbody>
        </table>
        </div>
      </div>
    
        <!--[if mso | IE]></v:textbox></v:rect></td></tr></table><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"\\" role=\\"presentation\\" style=\\"width:600px;\\" width=\\"600\\" bgcolor=\\"#f9f9f9\\" ><tr><td style=\\"line-height:0px;font-size:0px;mso-line-height-rule:exactly;\\"><v:rect style=\\"width:600px;\\" xmlns:v=\\"urn:schemas-microsoft-com:vml\\" fill=\\"true\\" stroke=\\"false\\"><v:fill origin=\\"0.5, 0\\" position=\\"0.5, 0\\" src=\\"\\" color=\\"#f9f9f9\\" type=\\"tile\\" size=\\"600px\\" aspect=\\"atmost\\" /><v:textbox style=\\"mso-fit-shape-to-text:true\\" inset=\\"0,0,0,0\\"><![endif]-->
          
      <div  style=\\"background:#f9f9f9;background-color:#f9f9f9;margin:0px auto;max-width:600px;\\">
        <div  style=\\"line-height:0;font-size:0;\\">
        <table
           align=\\"center\\" background=\\"\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"background:#f9f9f9;background-color:#f9f9f9;width:100%;\\"
        >
          <tbody>
            <tr>
              <td
                 style=\\"border-bottom:solid 2px #131313;direction:ltr;font-size:0px;padding:0px;padding-bottom:32px;padding-left:32px;padding-right:32px;padding-top:32px;text-align:center;\\"
              >
                <!--[if mso | IE]><table role=\\"presentation\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\"><tr><td class=\\"\\" style=\\"vertical-align:top;width:536px;\\" ><![endif]-->
            
      <div
         class=\\"mj-column-per-100 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" width=\\"100%\\"
      >
        <tbody>
          <tr>
            <td  style=\\"vertical-align:top;padding:0px;\\">
              
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"left\\" style=\\"font-size:0px;padding:0px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:24px;font-weight:600;line-height:1.5;text-align:left;color:#131313;\\"
      >Lorem Ipsum</div>
    
                </td>
              </tr>
            
              <tr>
                <td
                   align=\\"left\\" style=\\"font-size:0px;padding:0px;padding-top:16px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:20px;line-height:1.5;text-align:left;color:#131313;\\"
      >Lorem Ipsum</div>
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
            </td>
          </tr>
        </tbody>
      </table>
    
      </div>
    
          <!--[if mso | IE]></td></tr></table><![endif]-->
              </td>
            </tr>
          </tbody>
        </table>
        </div>
      </div>
    
        <!--[if mso | IE]></v:textbox></v:rect></td></tr></table><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"\\" role=\\"presentation\\" style=\\"width:600px;\\" width=\\"600\\" bgcolor=\\"#f7f7f7\\" ><tr><td style=\\"line-height:0px;font-size:0px;mso-line-height-rule:exactly;\\"><v:rect style=\\"width:600px;\\" xmlns:v=\\"urn:schemas-microsoft-com:vml\\" fill=\\"true\\" stroke=\\"false\\"><v:fill origin=\\"0.5, 0\\" position=\\"0.5, 0\\" src=\\"\\" color=\\"#f7f7f7\\" type=\\"tile\\" size=\\"600px\\" aspect=\\"atmost\\" /><v:textbox style=\\"mso-fit-shape-to-text:true\\" inset=\\"0,0,0,0\\"><![endif]-->
          
      <div  style=\\"background:#f7f7f7;background-color:#f7f7f7;margin:0px auto;max-width:600px;\\">
        <div  style=\\"line-height:0;font-size:0;\\">
        <table
           align=\\"center\\" background=\\"\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"background:#f7f7f7;background-color:#f7f7f7;width:100%;\\"
        >
          <tbody>
            <tr>
              <td
                 style=\\"direction:ltr;font-size:0px;padding:0px;padding-bottom:32px;padding-left:32px;padding-right:32px;padding-top:32px;text-align:center;\\"
              >
                <!--[if mso | IE]><table role=\\"presentation\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\"><tr><td class=\\"\\" style=\\"vertical-align:top;width:536px;\\" ><![endif]-->
            
      <div
         class=\\"mj-column-per-100 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" width=\\"100%\\"
      >
        <tbody>
          <tr>
            <td  style=\\"vertical-align:top;padding:0px;\\">
              
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"left\\" style=\\"font-size:0px;padding:0px;word-break:break-word;\\"
                >
                  
      <div
         style=\\"font-family:Arial;font-size:14px;line-height:1.5;text-align:left;color:#131313;\\"
      ><div><p>Hello</p><p>World</p></div></div>
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
            </td>
          </tr>
        </tbody>
      </table>
    
      </div>
    
          <!--[if mso | IE]></td></tr></table><![endif]-->
              </td>
            </tr>
          </tbody>
        </table>
        </div>
      </div>
    
        <!--[if mso | IE]></v:textbox></v:rect></td></tr></table><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"\\" role=\\"presentation\\" style=\\"width:600px;\\" width=\\"600\\" bgcolor=\\"#f9f9f9\\" ><tr><td style=\\"line-height:0px;font-size:0px;mso-line-height-rule:exactly;\\"><v:rect style=\\"width:600px;\\" xmlns:v=\\"urn:schemas-microsoft-com:vml\\" fill=\\"true\\" stroke=\\"false\\"><v:fill origin=\\"0.5, 0\\" position=\\"0.5, 0\\" src=\\"\\" color=\\"#f9f9f9\\" type=\\"tile\\" size=\\"600px\\" aspect=\\"atmost\\" /><v:textbox style=\\"mso-fit-shape-to-text:true\\" inset=\\"0,0,0,0\\"><![endif]-->
          
      <div  style=\\"background:#f9f9f9;background-color:#f9f9f9;margin:0px auto;max-width:600px;\\">
        <div  style=\\"line-height:0;font-size:0;\\">
        <table
           align=\\"center\\" background=\\"\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"background:#f9f9f9;background-color:#f9f9f9;width:100%;\\"
        >
          <tbody>
            <tr>
              <td
                 style=\\"border-bottom:solid 12px #50e3c2;border-top:solid 2px #131313;direction:ltr;font-size:0px;padding:0px;padding-bottom:32px;padding-left:32px;padding-right:32px;padding-top:32px;text-align:center;\\"
              >
                <!--[if mso | IE]><table role=\\"presentation\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\"><tr><td class=\\"\\" style=\\"vertical-align:top;width:536px;\\" ><![endif]-->
            
      <div
         class=\\"mj-column-per-100 mj-outlook-group-fix\\" style=\\"font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;\\"
      >
        
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" width=\\"100%\\"
      >
        <tbody>
          <tr>
            <td  style=\\"vertical-align:top;padding:0px;\\">
              
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"\\" width=\\"100%\\"
      >
        <tbody>
          
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:0px;word-break:break-word;\\"
                >
                  
      <table
         border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-collapse:separate;line-height:100%;\\"
      >
        <tbody>
          <tr>
            <td
               align=\\"center\\" bgcolor=\\"transparent\\" role=\\"presentation\\" style=\\"border:solid 2px #131313;border-radius:8px;cursor:auto;mso-padding-alt:10px 25px;background:transparent;\\" valign=\\"middle\\"
            >
              <a
                 href=\\"https://3ook.com/store?utm_medium=email&amp;utm_source=edm-footer\\" rel=\\"noopener noreferrer\\" style=\\"display:inline-block;background:transparent;color:#131313;font-family:Arial;font-size:14px;font-weight:600;line-height:120%;margin:0;text-decoration:none;text-transform:none;padding:10px 25px;mso-padding-alt:0px;border-radius:8px;\\" target=\\"_blank\\"
              >
                瀏覽書店
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    
                </td>
              </tr>
            
              <tr>
                <td
                   align=\\"center\\" style=\\"font-size:0px;padding:0px;padding-top:16px;padding-bottom:0px;word-break:break-word;\\"
                >
                  
      
     <!--[if mso | IE]><table align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" ><tr><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                <tbody>
                  
      <tr
        
      >
        <td  style=\\"padding:6px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:16px;width:32px;\\"
          >
            <tbody>
              <tr>
                <td  style=\\"font-size:0;height:32px;vertical-align:middle;width:32px;\\">
                  <a  href=\\"https://www.instagram.com/3ookcom?utm_medium=email&amp;utm_source=edm-footer\\" target=\\"_blank\\">
                    <img
                       alt=\\"\\" height=\\"32\\" src=\\"http://localhost:3000/static/social-elements/v2/instagram.png\\" style=\\"border-radius:16px;display:block;\\" width=\\"32\\"
                    />
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
        
      </tr>
    
                </tbody>
              </table>
            <!--[if mso | IE]></td><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                <tbody>
                  
      <tr
        
      >
        <td  style=\\"padding:6px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:16px;width:32px;\\"
          >
            <tbody>
              <tr>
                <td  style=\\"font-size:0;height:32px;vertical-align:middle;width:32px;\\">
                  <a  href=\\"https://www.facebook.com/3ookcom?utm_medium=email&amp;utm_source=edm-footer\\" target=\\"_blank\\">
                    <img
                       alt=\\"\\" height=\\"32\\" src=\\"http://localhost:3000/static/social-elements/v2/facebook.png\\" style=\\"border-radius:16px;display:block;\\" width=\\"32\\"
                    />
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
        
      </tr>
    
                </tbody>
              </table>
            <!--[if mso | IE]></td><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                <tbody>
                  
      <tr
        
      >
        <td  style=\\"padding:6px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:16px;width:32px;\\"
          >
            <tbody>
              <tr>
                <td  style=\\"font-size:0;height:32px;vertical-align:middle;width:32px;\\">
                  <a  href=\\"https://www.threads.com/@3ookcom?utm_medium=email&amp;utm_source=edm-footer\\" target=\\"_blank\\">
                    <img
                       alt=\\"\\" height=\\"32\\" src=\\"http://localhost:3000/static/social-elements/v2/threads.png\\" style=\\"border-radius:16px;display:block;\\" width=\\"32\\"
                    />
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
        
      </tr>
    
                </tbody>
              </table>
            <!--[if mso | IE]></td><td><![endif]-->
              <table
                 align=\\"center\\" border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"float:none;display:inline-table;\\"
              >
                <tbody>
                  
      <tr
        
      >
        <td  style=\\"padding:6px;vertical-align:middle;\\">
          <table
             border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" role=\\"presentation\\" style=\\"border-radius:16px;width:32px;\\"
          >
            <tbody>
              <tr>
                <td  style=\\"font-size:0;height:32px;vertical-align:middle;width:32px;\\">
                  <a  href=\\"https://review.3ook.com?utm_medium=email&amp;utm_source=edm-footer\\" target=\\"_blank\\">
                    <img
                       alt=\\"\\" height=\\"32\\" src=\\"http://localhost:3000/static/social-elements/v2/substack.png\\" style=\\"border-radius:16px;display:block;\\" width=\\"32\\"
                    />
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
        
      </tr>
    
                </tbody>
              </table>
            <!--[if mso | IE]></td></tr></table><![endif]-->
    
    
                </td>
              </tr>
            
        </tbody>
      </table>
    
            </td>
          </tr>
        </tbody>
      </table>
    
      </div>
    
          <!--[if mso | IE]></td></tr></table><![endif]-->
              </td>
            </tr>
          </tbody>
        </table>
        </div>
      </div>
    
        <!--[if mso | IE]></v:textbox></v:rect></td></tr></table><![endif]-->
    
    
      </div>
    
  </body>
</html>
  "
`;
